fix: dark mode fix

--- a/src/assets/styles/tooltip.css
+++ b/src/assets/styles/tooltip.css
@@ -52,14 +52,14 @@
 .leaflet-tooltip-custom__title {
   font-weight: var(--font-weight-semibold);
   font-size: var(--text-sm);
-  color: var(--color-black);
+  color: var(--color-foreground);
   margin-bottom: 2px;
 }
 
 .leaflet-tooltip-custom__subtitle {
   font-weight: var(--font-weight-medium);
   font-size: var(--text-xs);
-  color: var(--color-black);
+  color: var(--color-foreground);
   margin-bottom: 2px;
 }
 
